updated io.propagated changes to builder and